--- a/partials/build-list.html
+++ b/partials/build-list.html
@@ -1,36 +1,59 @@
 <div class="topcoat-navigation-bar">
     <div class="topcoat-navigation-bar__item left quarter">
+        <a class="topcoat-icon-button--quiet">
+            <span class="topcoat-icon topcoat-icon--menu-stack"></span>
+        </a>
     </div>
     <div class="topcoat-navigation-bar__item center half">
-        <h1 class="topcoat-navigation-bar__title">App List</h1>
+        <h1 class="topcoat-navigation-bar__title">Build Directory</h1>
     </div>
     <div class="topcoat-navigation-bar__item right quarter">
+        <a class="topcoat-icon-button--quiet">
+            <span class="topcoat-icon topcoat-icon--search"></span>
+        </a>
     </div>
 </div>
-<!--
-<nav class="side-nav">
-    <div class="topcoat-list__container side-nav__list__container">
-        <ul class="topcoat-list side-nav__list">
-            <li class="topcoat-list__item side-nav__list__item">
-                <a href="#" class="side-nav__button">Item</a>
-            </li>
-            <li class="topcoat-list__item side-nav__list__item is-active">
-                <a href="#" class="side-nav__button">Item</a>
-            </li>
-            <li class="topcoat-list__item side-nav__list__item">
-                <a href="#" class="side-nav__button">Item</a>
-            </li>
-        </ul>
-    </div>
-</nav>
--->
-<div class="topcoat-list">
-    <h3 class="topcoat-list__header">App Builds</h3>
-    <ul class="topcoat-list__container" ng-repeat="build in buildList">
-          <a ng-href="#builds/{{build.id}}" > 
-        <li class="topcoat-list__item" >
-            {{ build.platform }}, {{ build.form }}, {{ build.appName }}, {{ build.state }}, {{ build.version }}
+<div class="topcoat-tab-bar full">
+    <label class="topcoat-tab-bar__item">
+        <input type="radio" name="topcoat" checked="checked">
+        <button id="tab1" class="topcoat-tab-bar__button full">All</button>
+    </label>
+    <label class="topcoat-tab-bar__item">
+        <input type="radio" name="topcoat">
+        <button class="topcoat-tab-bar__button full">iOS M</button>
+    </label>
+    <label class="topcoat-tab-bar__item">
+        <input type="radio" name="topcoat">
+        <button class="topcoat-tab-bar__button full">iOS T</button>
+    </label>
+    <label class="topcoat-tab-bar__item">
+        <input type="radio" name="topcoat">
+        <button class="topcoat-tab-bar__button full">And</button>
+    </label>
+    <label class="topcoat-tab-bar__item">
+        <input type="radio" name="topcoat">
+        <button class="topcoat-tab-bar__button full">Win M</button>
+    </label>
+    <label class="topcoat-tab-bar__item">
+        <input type="radio" name="topcoat">
+        <button class="topcoat-tab-bar__button full">Win T</button>
+    </label>
+</div>
+
+<div class="search-bar">
+    <input ng-model="query" type="search" placeholder="search" class="topcoat-search-input search-key">
+</div>
+
+<div class="topcoat-list__container">
+    <ul class="topcoat-list list">
+        <li ng-repeat="build in buildList | filter:query | orderBy:orderProp" class="topcoat-list__item">
+            <a href="#/builds/{{build.id}}">
+                <!-- <img ng-src="pics/{{employee.pic}}"> -->
+                <p>{{build.appName}} {{build.version}}</p>
+                <p>{{build.platform}} {{build.form}} {{build.state}}</p>
+                <span class="chevron"></span>
+                <span class="count">5</span>
+            </a>
         </li>
-           </a> 
     </ul>
 </div>
