--- a/partials/build-list.html
+++ b/partials/build-list.html
@@ -15,27 +15,27 @@
 </div>
 <div class="topcoat-tab-bar full">
     <label class="topcoat-tab-bar__item">
-        <input type="radio" name="topcoat" checked="checked">
+        <input type="radio" name="topcoat" ng-model="platformFilterState" value="all">
         <button id="tab1" class="topcoat-tab-bar__button full">All</button>
     </label>
     <label class="topcoat-tab-bar__item">
-        <input type="radio" name="topcoat">
+        <input type="radio" name="topcoat" ng-model="platformFilterState" value="iosm">
         <button class="topcoat-tab-bar__button full">iOS M</button>
     </label>
     <label class="topcoat-tab-bar__item">
-        <input type="radio" name="topcoat">
+        <input type="radio" name="topcoat" ng-model="platformFilterState" value="iost">
         <button class="topcoat-tab-bar__button full">iOS T</button>
     </label>
     <label class="topcoat-tab-bar__item">
-        <input type="radio" name="topcoat">
+        <input type="radio" name="topcoat" ng-model="platformFilterState" value="and">
         <button class="topcoat-tab-bar__button full">And</button>
     </label>
     <label class="topcoat-tab-bar__item">
-        <input type="radio" name="topcoat">
+        <input type="radio" name="topcoat" ng-model="platformFilterState" value="winm">
         <button class="topcoat-tab-bar__button full">Win M</button>
     </label>
     <label class="topcoat-tab-bar__item">
-        <input type="radio" name="topcoat">
+        <input type="radio" name="topcoat" ng-model="platformFilterState" value="wint">
         <button class="topcoat-tab-bar__button full">Win T</button>
     </label>
 </div>
