--- a/partials/build-detail.html
+++ b/partials/build-detail.html
@@ -7,9 +7,10 @@
     <div class="topcoat-navigation-bar__item right quarter">
     </div>
 </div>
-
+<div id="wrapper" style="text-align: center">    
+    <button class="topcoat-button--cta cen" id="yourdiv" style="display: inline-block;">Install</button>
+</div>
 <div class="topcoat-list">
-    <h3 class="topcoat-list__header">App Builds</h3>
     <ul class="topcoat-list__container">
         <!--    <a src="#"> -->
         <li class="topcoat-list__item" >
