--- a/client_web/source/resource/client_web/scss/theme/indigo/_styles.scss
+++ b/client_web/source/resource/client_web/scss/theme/indigo/_styles.scss
@@ -119,8 +119,8 @@ $input-active-border-color: $highlight-color;
 
 $list-background: $background-color;
 $list-title-text-color: $color-1;
-$list-title-font-size:  rem(14);
-$list-title-font-weight: normal;
+$list-title-font-size:  rem(17);
+$list-title-font-weight: bold;
 $list-subtitle-text-color:  $highlight-color;
 $list-subtitle-font-size:  rem(14);
 $list-border-color: $color-4;
